--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,16 @@
 [package]
 name = "dhcpd_parser"
 description = "Parser for dhcpd configuration files. Currently supports only dhcpd.leases file of the OpenBSD base implementation"
+homepage = "https://github.com/mskrip/dhcpd-parser"
+repository = "https://github.com/mskrip/dhcpd-parser.git"
+
+readme = "README.md"
+keywords = ["dhcpd", "leases", "OpenBSD"]
+
 version = "0.1.0"
 authors = ["Marián Skrip <marian.skripp@gmail.com>"]
 edition = "2018"
+license = "MIT"
+
 
 [dependencies]
